--- a/formative-b/form.html
+++ b/formative-b/form.html
@@ -59,8 +59,9 @@
         <div>
             <img id="cardImg" src="assets/birthday.jpg"/>
         </div>
-        <div class="noBorder">
-            <h1 class="sketch">Happy birthday to you</h1>
+        <div id="borderD" class="noBorder">
+            <h1 id="h1" class="sketch">Happy birthday to you</h1> <br>
+			<p id="messageArea"></p>
         </div>
     </div>
 
